<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_active_event"
        android:icon="@drawable/active"
        android:title="@string/bottom_title_active_event" />

    <item
        android:id="@+id/navigation_completed_event"
        android:icon="@drawable/done"
        android:title="@string/bottom_title_completed_event" />
    <item
        android:id="@+id/navigation_favorite_event"
        android:icon="@drawable/favorite_filled"
        android:title="@string/bottom_title_favorite_event"/>
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/setting"
        android:title="@string/bottom_title_setting"/>
</menu>
