<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.EventDetail"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/iv_media_cover_event"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:contentDescription="@string/image_event"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/event_name"
            style="@style/PageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/favorite_fab"
            tools:ignore="TextContrastCheck"
            tools:text="test" />

        <TextView
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name"
            tools:ignore="TextContrastCheck,VisualLintOverlap"
            tools:text="ini text untuk deskripsi" />

        <TextView
            android:id="@+id/title_owner_name"
            style="@style/DescriptionTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/owner_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_description"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/owner_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_owner_name"
            tools:text="placeholder owner" />

        <TextView
            android:id="@+id/schedule"
            style="@style/DescriptionTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/begin_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/owner_name"
            tools:ignore="TextContrastCheck" />
        />

        <TextView
            android:id="@+id/start_event"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/start_event"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schedule"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/end_event"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/end_event"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_event"
            tools:ignore="TextSizeCheck" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/favorite_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-32dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/blue"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/bottom_title_favorite_event"
            android:src="@drawable/favorite_border"
            app:layout_anchorGravity="bottom|end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_media_cover_event" />

        <TextView
            android:id="@+id/event_start_time"
            style="@style/DescriptionTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/schedule"
            tools:ignore="TextContrastCheck"
            tools:text="dataStart" />

        <TextView
            android:id="@+id/event_end_time"
            style="@style/DescriptionTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/event_start_time"
            tools:ignore="TextContrastCheck"
            tools:text="dataEnd" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="128dp" />

        <TextView
            android:id="@+id/quota_title"
            style="@style/DescriptionTextTitle"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/quota"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/end_event"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/event_quota"
            style="@style/DescriptionTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/event_end_time"
            tools:ignore="TextContrastCheck"
            tools:text="kuota" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_media_cover_event" />

        <TextView
            android:id="@+id/error_message"
            style="@style/DescriptionTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_media_cover_event"
            tools:ignore="TextContrastCheck"
            tools:text="@string/error_message" />

        <TextView
            android:id="@+id/remaining_quota_title"
            style="@style/DescriptionTextTitle"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/remaining_quota"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quota_title"
            tools:ignore="TextSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/quota"
            style="@style/DescriptionTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/event_quota"
            app:layout_constraintStart_toStartOf="@+id/event_quota"
            app:layout_constraintTop_toBottomOf="@+id/event_quota"
            tools:ignore="TextContrastCheck"
            tools:text="kuota" />

        <TextView
            android:id="@+id/remaining_quota"
            style="@style/DescriptionTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/event_quota"
            tools:text="0" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/visit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/remaining_quota_title"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
