<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.completed.CompletedEvent">

        <TextView
            android:id="@+id/title_completed"
            style="@style/PageTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title_completed_event"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck,VisualLintOverlap" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/completed_event"
            android:layout_width="0dp"
            android:layout_height="545dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchBar"
            tools:listitem="@layout/completed_home_layout" />

        <TextView
            android:id="@+id/error_message"
            style="@style/DescriptionTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/completed_event"
            app:layout_constraintEnd_toEndOf="@+id/searchBar"
            app:layout_constraintStart_toStartOf="@+id/searchBar"
            app:layout_constraintTop_toBottomOf="@+id/searchBar"
            tools:ignore="TextContrastCheck,VisualLintOverlap"
            tools:text="@string/error_message" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="@+id/completed_event"
            app:layout_constraintEnd_toEndOf="@+id/completed_event"
            app:layout_constraintStart_toStartOf="@+id/completed_event"
            app:layout_constraintTop_toTopOf="@+id/completed_event" />

        <com.google.android.material.search.SearchBar
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/search_keyword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_completed">
        </com.google.android.material.search.SearchBar>

        <com.google.android.material.search.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/search_keyword"
            app:layout_anchor="@id/searchBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </com.google.android.material.search.SearchView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
